Add aadimator at the bottom

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,22 +11,22 @@
 
     <android.support.constraint.ConstraintLayout
         android:id="@+id/pictureView"
-        android:layout_width="381dp"
-        android:layout_height="502dp"
+        android:layout_width="379dp"
+        android:layout_height="499dp"
         android:background="@color/phaedraGreen"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        >
+        tools:layout_editor_absoluteX="5dp">
 
         <EditText
             android:id="@+id/editText"
-            android:layout_width="0dp"
-            android:layout_height="486dp"
-            android:layout_marginTop="22dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="16dp"
             android:background="@android:color/transparent"
             android:hint="ٹائپ کریں"
             android:paddingEnd="32dp"
@@ -36,10 +36,26 @@
             android:textColorHint="#44FFFFFF"
             android:textDirection='anyRtl'
             android:textSize="36sp"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintBottom_toTopOf="@+id/textView"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="0dp"
+            android:layout_marginRight="14dp"
+            android:fontFamily="cursive"
+            android:text="aadimator"
+            android:textColor="#99FFFFFF"
+            android:textSize="24sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="15dp"/>
 
     </android.support.constraint.ConstraintLayout>
 
